--- a/arch/arm/configs/spear6xx_defconfig
+++ b/arch/arm/configs/spear6xx_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32
-# Fri Jun 25 16:44:48 2010
+# Tue Aug 31 15:25:50 2010
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -191,8 +191,12 @@ CONFIG_PLAT_SPEAR=y
 # CONFIG_ARCH_SPEAR13XX is not set
 # CONFIG_ARCH_SPEAR3XX is not set
 CONFIG_ARCH_SPEAR6XX=y
-CONFIG_MACH_SPEAR600=y
+
+#
+# SPEAr6xx Implementations
+#
 CONFIG_BOARD_SPEAR600_EVB=y
+CONFIG_MACH_SPEAR600=y
 CONFIG_SPEAR_CLCD=y
 
 #
