ST SPEAr900: Adding support for spear900 machine
SPEAr900 is an SOC based on ARM CortexA9 range of CPUs. It comes under SPEAr13xx
family for SOCs. This patch adds basic support spear900 machine and evaluation
board.

Signed-off-by: Viresh Kumar <viresh.kumar@st.com>

--- a/arch/arm/configs/spear13xx_defconfig
+++ b/arch/arm/configs/spear13xx_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32
-# Tue Aug 31 15:28:25 2010
+# Wed Sep  8 11:02:06 2010
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -199,8 +199,10 @@ CONFIG_ARCH_SPEAR13XX=y
 #
 CONFIG_BOARD_SPEAR1300_EVB=y
 CONFIG_BOARD_SPEAR1310_EVB=y
+CONFIG_BOARD_SPEAR900_EVB=y
 CONFIG_MACH_SPEAR1300=y
 CONFIG_MACH_SPEAR1310=y
+CONFIG_MACH_SPEAR900=y
 
 #
 # Processor Type
