SPEAr1340: Add support for Plug Boards
SPEAr1340 contains few plug boards, which will be attached to existing
evaluation boards. Plug boards allow the different standard test and debug
procedures on the same physical interface without the need to develop a specific
board and use a different manufacturer’s chips. They are connected to the main
board through small high speed shielded connectors to avoid quality degradation
of the signals. Each plug has the interface connectors on different positions to
prevent any insertions errors.

More information about boards can be fount at:
https://codex.cro.st.com/plugins/docman/?group_id=1309&action=show&id=164214

Signed-off-by: Viresh Kumar <viresh.kumar@st.com>

--- a/arch/arm/mach-spear13xx/Kconfig
+++ b/arch/arm/mach-spear13xx/Kconfig
@@ -36,6 +36,12 @@ config MACH_SPEAR1340_EVB
 	help
 	  Supports ST SPEAr1340 Evaluation Board
 
+config SPEAR1340_PLUG_BOARDS
+	bool "SPEAr1340 Plug Boards"
+	depends on MACH_SPEAR1340_EVB
+	help
+	  Supports ST SPEAr1340 Plug boards
+
 config MACH_SPEAR900_EVB
 	bool "SPEAr900 Evaluation Board"
 	select CPU_SPEAR900
