SPEAr1340: Update defconfig for Plug Board
Signed-off-by: Viresh Kumar <viresh.kumar@st.com>

--- a/arch/arm/configs/spear13xx_defconfig
+++ b/arch/arm/configs/spear13xx_defconfig
@@ -18,6 +18,7 @@ CONFIG_MACH_SPEAR1310_REVA_EVB=y
 CONFIG_MACH_R1801E=y
 CONFIG_MACH_SPEAR1310_EVB=y
 CONFIG_MACH_SPEAR1340_EVB=y
+CONFIG_SPEAR1340_PLUG_BOARDS=y
 CONFIG_MACH_SPEAR900_EVB=y
 CONFIG_DW_PCIE=y
 CONFIG_SPEAR_PCIE_REV341=y
